# contents

./: .gitignore
LinuxCommands/: notes.md
audio-to-text-generator/: README.md  index.js  package-lock.json  package.json
audio-to-text-generator/public/: index.html
i18n-translation/: README.md  package-lock.json  package.json
i18n-translation/src/: App.tsx
i18n-translation/src/i18n/: index.ts
letphilbot/: app.py  requirements.txt
letphilbot/me/: summary.txt
multer-tutorial/: README.md
multer-tutorial/backend/: README.md  index.js  package-lock.json  package.json
multer-tutorial/backend/controllers/: index.js  users.controller.js
multer-tutorial/backend/public/: about.html  (+1 more)
multer-tutorial/project/: app.js  package-lock.json  package.json
simple-function-edge-cases/: README.md  package-lock.json  package.json  sum.js  sum.test.js
text-to-audio-generator/: text-to-audio-generator.py
todo-app/: README.md  index.html
todo-app/todo-backend/: README.md  docker-compose.env  docker-compose.yml  k8s.yaml  moleculer.config.js  package-lock.json  package.json
todo-app/todo-frontend/: package-lock.json  package.json
youtube-subtitle-generator/: README.md  get-youtube-audio.js  index.js  package-lock.json  package.json
youtube-subtitle-generator/public/: index.html
youtube_consultant/: README.md  pyproject.toml
youtube_consultant/output/: channel_analysis.md  channel_consultant.md  top_channels.json
youtube_consultant/src/youtube_consultant/: crew.py  main.py
youtube_consultant/src/youtube_consultant/config/: agents.yaml  tasks.yaml
(+22 files in other folders)
