[project]
name = "youtube_consultant"
version = "0.1.0"
description = "youtube_consultant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
youtube_consultant = "youtube_consultant.main:run"
run_crew = "youtube_consultant.main:run"
train = "youtube_consultant.main:train"
replay = "youtube_consultant.main:replay"
test = "youtube_consultant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
